WIM-1226 - Changed heading color as on wimgemeenten.nl to fix contrast issue with pinks on light grays.

--- a/themes/wim/css/wim.css
+++ b/themes/wim/css/wim.css
@@ -3471,7 +3471,6 @@ ul[class^="custom-list-view-mode"]:not([class*="title"]) li {
   padding: 0;
   background: none;
   border-top: none;
-  color: #fe229b;
 }
 
 .footer .block h3:first-of-type,
